--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "@langchain/community": "^0.0.53",
+    "@neondatabase/serverless": "^0.9.1",
+    "dotenv-cli": "^7.4.1",
     "pdf-parse": "^1.1.1"
   }
 }
