--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
-    "@langchain/community": "^0.0.53",
+    "@langchain/community": "^0.3.11",
+    "@langchain/core": "^0.3.17",
+    "@langchain/ollama": "^0.1.1",
     "@neondatabase/serverless": "^0.9.1",
     "dotenv-cli": "^7.4.1",
+    "langchain": "^0.3.5",
     "pdf-parse": "^1.1.1"
   }
 }
